# YAE

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/shaders/: font_fragmentshader.glsl  font_vertexshader.glsl  fragmentshader.glsl  vertexshader.glsl
src/: main.cpp  main.h
src/engine/: component.h  controls.cpp  controls.h  gameobject.cpp  gameobject.h  gui.cpp  gui.h  init.cpp  init.h  material.cpp  material.h  mesh.cpp  mesh.h  render.cpp  render.h  scene.cpp  scene.h  shaderloader.cpp  shaderloader.h  texture.cpp  texture.h  windowmanager.cpp  windowmanager.h
src/engine/components/: meshcomponent.cpp  meshcomponent.h
src/game/: component.h  gamemain.cpp  gamemain.h  gameobject.cpp  gameobject.h
